FOLREL-612: Update to mod-linked-data Java 21